# sphinx_csv_filter

./: .gitignore  CHANGES.txt  DEVELOP.rst  LICENSE  README.md  README.rst  buildout.cfg  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  versions.cfg
.github/workflows/: tests.yml
devtools/: create_tag.sh
docs/: conf.py  example.csv  index.txt
src/crate/: __init__.py
src/crate/sphinx/: csv.py
tests/: test_csv.py
