[build-system]
requires = [
    "setuptools==71.1.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx-csv-filter"
version = "0.4.2"
description='A CSV filter directive for docutils and Sphinx, that extends the "csv-table" reStructuredText directive to add row filtering options.'
readme = "README.rst"
requires-python = ">=3.9"
license.file = "LICENSE"
authors = [
    {name="Crate.IO GmbH", email="office@crate.io"}
]
maintainers = [
    {name="Crate.IO GmbH", email="office@crate.io"}
]
keywords= [
    "sphinx",
    "csv",
    "filter",
    "docutils",
    "directive",
    "plugin",
    "csv-table",
    "csv-filter",
    "restructuredtext'",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Education",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: reStructuredText",
]
dependencies = [
    "Sphinx",
]

[project.optional-dependencies]

development = [
    "build",
    "setuptools",
    "twine",
    "wheel",
]
testing = [
    "flake8",
    "pytest",
    "pytest-cov",
    "pytest-flake8",
    "pytest-isort",
]

[project.urls]
Homepage = 'https://github.com/crate/sphinx_csv_filter'
Issues = 'https://github.com/crate/sphinx_csv_filter/issues'

# Flake8 doesn't believe in pyproject.toml. For now, configuration is in tox.ini
# [tool.flake8]

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = ["croud"]
line_length = 88
multi_line_output = 3

[tool.pytest.ini_options]
addopts = "-vvv --flake8 --isort --cov --cov-report=term-missing --cov-report=xml"
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS"
